--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 * {
-    font-family: "Source Sans Pro", monospace;
+    font-family: "Open Sans", monospace;
     color: #fff;
 }
 
@@ -17,7 +17,6 @@ nav {
     display: flex;
     justify-content: center;
     position: relative;
-    backdrop-filter: blur(20px);
     align-items: center;
     top: 15px;
     width: 460px;
@@ -107,10 +106,10 @@ footer {
     margin-left: auto;
     display: grid;
     align-items: center;
+    background-color: #1a1a1a;
     max-width: 800px;
-    background: linear-gradient(#191919, #191919) padding-box, linear-gradient(to bottom, #484848, #323232) border-box;
     border-radius: 10px;
-    border: 1px solid transparent;
+    border: 1px solid #282828;
     box-shadow: rgba(52, 58, 64, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
